# t-force

./: .env.template  .gitignore  Cargo.toml  DOCKER_README.md  DOCKER_SCRIPTS_README.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.prod.example  ws-latency-test.html  ws-latency-test.js
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-entrypoint.sh
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250824_000001_create_users_table.rs  m20250826_000001_create_two_factor_auth_table.rs  m20250827_000001_create_user_sessions_table.rs  m20250827_000002_add_default_admin_user.rs  m20250827_000003_add_password_reset_fields.rs  m20250828_000001_add_is_active_to_users.rs  m20250828_000002_update_existing_users_is_active.rs  m20250829_000001_create_chat_rooms_table.rs  m20250829_000002_create_chat_messages_table.rs  m20250830_000001_add_password_to_chat_rooms.rs  m20250830_000002_create_message_reactions_table.rs  m20250830_000003_add_room_code_to_chat_rooms.rs  m20250830_000004_create_room_memberships_table.rs
backend/src/: main.rs
backend/src/api/: basic.rs  mod.rs
backend/src/api/admin/: users.rs
backend/src/api/auth/: login.rs  logout.rs  mod.rs  oauth.rs  password_reset.rs  register.rs  sessions.rs  sync.rs  two_factor.rs  validate.rs
backend/src/api/chat/: join_room_by_code.rs  message.rs  mod.rs  room.rs  upload.rs  voice.rs  ws.rs
backend/src/api/user/: me.rs  mod.rs  profile.rs  update.rs
backend/src/auth/: admin_guard.rs  middleware.rs  mod.rs  utils.rs
backend/src/models/: mod.rs
backend/src/models/entities/: chat_message.rs  chat_room.rs  message_reaction.rs  mod.rs  room_membership.rs  two_factor_auth.rs  user.rs  user_session.rs
backend/templates/: password_reset.html
frontend/: .dockerignore  Dockerfile  (+8 more)
(+57 files in other folders)
