[package]
name = "tforce"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4.0"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.1"

# Database
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros", "with-chrono"] }
sea-query = "0.32.7"
migration = { path = "migration" }

# Authentication
jsonwebtoken = "9.3.1"
bcrypt = "0.15.0"
argon2 = "0.5.2"
lazy_static = "1.4.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.23", features = ["json"] }
url = "2.4.1"
base64 = "0.22.1"

# Serialization/Deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Async
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"

# Logging and configuration
env_logger = "0.11.8"
log = "0.4.20"
dotenv = "0.15.0"

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.48"

# Mail
lettre = "0.11.18"

# Utilities
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rand = "0.9.2"

# Two-factor authentication
totp-rs = "5.7.0"
qrcode = "0.14.1"
image = { version = "0.24.7", features = ["png"] }
