[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

# SeaORM migration dependencies
sea-orm-migration = { version = "1.1.14", features = ["runtime-actix-native-tls", "sqlx-postgres", "with-chrono"] }
chrono = "0.4.41"
argon2 = "0.5.3"
uuid = { version = "1.8.0", features = ["v4"] }
dotenv = "0.15.0"
